# scope3ai-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.changelog/templates/.components/: changes.md.j2
.github/workflows/: conventional_commit_pr.yml  pytests.yml  release.yml
docs/: configuration.md  index.md  quickstart.md  tracer.md
docs/api/: api_client.md  api_types.md  scope3ai.md  tracer.md
examples/: anthropic-async-chat.py  anthropic-async-stream-chat.py  anthropic-chat.py  anthropic-stream-chat.py  api-async.py  api-sync.py  base-example.py  cohere-async-chat.py  cohere-async-stream-chat.py  cohere-chat.py  cohere-stream-chat.py  cohere_v2-chat.py  examples.rar  huggingface-chat.py  huggingface-speech-to-text.py  huggingface-text-to-image.py  huggingface-translation.py  litellm-async-chat.py  litellm-async-stream-chat.py  litellm-chat.py  litellm-stream-chat.py  openai-async-chat.py  openai-async-image.py  openai-async-stream-chat.py  openai-chat.py  openai-image.py  openai-stream-chat.py  openai-stt.py  openai-sync-chat.py  possible-usages.py
examples/anthropic/: README.md  anthropic-async-chat.py  anthropic-async-stream-chat.py  anthropic-chat.py  anthropic-stream-chat.py
examples/cohere/: README.md  cohere-async-chat.py  cohere-async-stream-chat.py  cohere-chat.py  cohere-stream-chat.py  cohere_v2-async-chat.py  cohere_v2-async-stream-chat.py  cohere_v2-chat.py  cohere_v2-stream-chat.py
examples/hugging-face/: README.md  chat-async.py  chat.py  image-to-image-async.py  image-to-image.py  speech-to-text-async.py  speech-to-text.py  text-to-image-async.py  text-to-image.py  text-to-speech-async.py  text-to-speech.py  translation-async.py  translation.py
examples/litellm/: README.md  litellm-acompletion.py  litellm-aimage-generation.py  litellm-aspeech.py  litellm-atranscription.py  litellm-completion.py  litellm-image-generation.py  litellm-speech.py  litellm-transcription.py
examples/mistralai/: README.md  mistral-complete-async.py  mistral-complete.py  mistral-stream-async.py  mistral-stream.py
examples/openai/: README.md  openai-async-chat.py  openai-async-image.py  openai-async-speech.py  openai-async-stream-chat.py  openai-async-transcription.py  openai-chat.py  openai-image.py  openai-speech.py  openai-stream-chat.py  openai-stt.py  openai-sync-chat.py  openai-transcription.py
scope3ai/: __init__.py  base_tracer.py  constants.py  lib.py  types.py  worker.py  wrapper.py
scope3ai/api/: __init__.py  client.py  commandsgen.py  defaults.py  tracer.py  types.py  typesgen.py
scope3ai/response_interceptor/: aiohttp_interceptor.py  instrument.py  requests_interceptor.py
scope3ai/tracers/: huggingface_tracer.py  openai_tracer.py
scope3ai/tracers/anthropic/: chat.py  instrument.py
scope3ai/tracers/cohere/: chat.py  chat_v2.py  instrument.py
scope3ai/tracers/gemini/: chat.py  instrument.py
scope3ai/tracers/google_genai/: chat.py  instrument.py
scope3ai/tracers/huggingface/: chat.py  huggingface_tracer.py  image_to_image.py  instrument.py  post_request_interceptor.py  speech_to_text.py  text_to_image.py  text_to_speech.py  translation.py  utils.py
scope3ai/tracers/litellm/: chat.py  instrument.py  speech_to_text.py  text_to_image.py  text_to_speech.py
scope3ai/tracers/mistralai/: chat.py  instrument.py
scope3ai/tracers/mistrarlai_v1/: chat.py  instrument.py
scope3ai/v1/: client.py  defaults.py
tests/: conftest.py  docker-compose.yml  test_anthropic_tracer.py  test_api.py  test_cohere_tracer.py  test_cohere_tracer_v2.py  test_combined_api_calls_with_vcrmixin.py  test_constants.py  test_gemini_tracer.py  test_google_genai_tracer.py  test_huggingface_tracer.py  test_lib_metadata.py  test_litellm_multimodal.py  test_litellm_multimodal_output.py  test_litellm_multimodal_use_default.py  test_litellm_tracer.py  test_litellm_tracer_use_default.py  test_liteml_tracer.py  test_mistralai.py  test_mistralai_multimodal.py  test_mistralai_v1.py  test_openai_image_tracer.py  test_openai_multimodal.py  test_openai_multimodal_output.py  test_openai_stt_tracer.py  test_openai_tracer.py  test_openai_translation_tracer.py  test_openai_tts_tracer.py  test_tracer.py  test_worker.py  utils.py
tests/api-mocks/: aiapi.yaml
tests/cassettes/: test_anthropic_async_chat.yaml  test_anthropic_async_stream_chat.yaml  test_anthropic_chat.yaml  test_anthropic_stream_async_chat_from_create_linear.yaml  test_anthropic_stream_chat.yaml  test_anthropic_stream_chat_from_create.yaml  test_anthropic_stream_chat_from_create_context.yaml  test_anthropic_stream_chat_from_create_linear.yaml  test_cohere_async_chat.yaml  test_cohere_async_chat_v2.yaml  test_cohere_async_stream_chat.yaml  test_cohere_async_stream_chat_v2.yaml  test_cohere_chat.yaml  test_cohere_chat_v2.yaml  test_cohere_stream_chat.yaml  test_cohere_stream_chat_v2.yaml  test_gemini_chat.yaml  test_gemini_chat_async.yaml  test_google_genai_chat.yaml  test_google_genai_chat_async.yaml  test_google_genai_chat_stream.yaml  test_google_genai_chat_stream_async.yaml  test_huggingface_chat.yaml  test_huggingface_hub_async_chat.yaml  test_huggingface_hub_async_stream_chat.yaml  test_huggingface_hub_chat.yaml  test_huggingface_hub_image_classification.yaml  test_huggingface_hub_image_classification[Path].yaml  test_huggingface_hub_image_classification[bytes].yaml  test_huggingface_hub_image_classification[str].yaml  test_huggingface_hub_image_classification_async.yaml  test_huggingface_hub_image_classification_async[Path].yaml  test_huggingface_hub_image_classification_async[bytes].yaml  test_huggingface_hub_image_classification_async[str].yaml  test_huggingface_hub_image_generation.yaml  test_huggingface_hub_image_generation_async.yaml  test_huggingface_hub_image_segmentation.yaml  test_huggingface_hub_image_segmentation[Path].yaml  test_huggingface_hub_image_segmentation[bytes].yaml  test_huggingface_hub_image_segmentation[str].yaml  (+183 more)
tests/data/: hello_there.flac
tools/: generate-client-commands.py  generate-docs.py  sync-api.py
(+14 files in other folders)
